Debug: add EventListenner to dbclick "All"

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
       <div id="content_saying">
         <div id="toolbar"></div>
         <div id="input_content" contenteditable="true"></div>
-        <div id="sayingto">你正在对 ，<span id="from"></span><span id="to"></span>说</div>
+        <div id="sayingto">Hi~, <span id="from"></span>, 你正在对 <span id="to"></span>说</div>
         <div id="say">发送</div>
       </div>
     </div>
