--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title><%= title %></title>
+<meta content="text/html; charset=utf-8">
+<title><%= title %>-RTCA</title>
 <link type="text/css" rel="stylesheet" href="stylesheets/common.css">
 <link type="text/css" rel="stylesheet" href="stylesheets/chat.css">
 </head>
