--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title><%= title %></title>
+<meta content="text/html; charset=utf-8">
+<title><%= title %>-RTCA</title>
 <link type="text/css" rel="stylesheet" href="stylesheets/signin.css">
 <link type="text/css" rel="stylesheet" href="stylesheets/common.css">
 </head>
 <body>
   <div id="content">
+  	<center><h1>Chat!~</h1></center>
     <form style="margin-top:70px;" method="post">
       <div class="form_line">
         <div class="form_label">昵称：</div>
@@ -20,7 +21,5 @@
       </div>
     </form>
   </div>
-<script src="/socket.io/socket.io.js"></script>
-<script src="javascripts/chat.js"></script>
 </body>
 </html>
