--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -27,6 +27,11 @@
 	</div>
 	</div>
 </div>
+	<br>
+  <br>
+  <div class="well">
+  	<center>RTCA ©2013</center> 
+	</div>
 <script src="http://cdnjs.bootcss.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="javascripts/bootstrap.js"></script>
 </body>
