--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -20,7 +20,7 @@
  	<div class="span6 offset3">
   	<div class="input-append">
   		<form method="post">
-  			<input class="span2" id="appendedInputButton" type="text" placeholder="昵称">
+  			<input class="span2" id="name" type="text" placeholder="昵称">
   			<button class="btn btn-danger" type="submit">Enjoy!</button>
 			</form>
 		</div>
