fix a bug & update the UI

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
   	<div class="span8 offset4">
   		<div id="sayingto">Hi~, <span id="from" class="label label-success"></span>, 你正在对 <span id="to" class="label label-important"></span>说</div>
   		<br>
-  		<div id="input_content" contenteditable="true" class="well"></div>
+  		<textarea id="input_content" class="well"></textarea>
   		<button id="say" class="pull-right btn btn-danger">发送消息</button>
   		<br>
   	</div>
