--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
   	<div class="span8 offset4">
   		<div id="sayingto">Hi~, <span id="from" class="label label-success"></span>, 你正在对 <span id="to" class="label label-important"></span>说</div>
   		<br>
-  		<textarea id="input_content" class="well"></textarea>
+  		<textarea id="input_content" class="well" style="margin: 0px 0px 20px; width: 730px; height: 58px;"></textarea>
   		<button id="say" class="pull-right btn btn-danger">发送消息</button>
   		<br>
   	</div>
